colcon_ws/log/build_2022-09-10_08-10-51/dasc_robot/stdout_stderr.log
[ 11%] Built target dascBots
[35m[1mScanning dependencies of target trajectory_follower[0m
[ 77%] Built target example_control_geometric_acceleration
[ 77%] Built target example_control_multi_rover
[ 77%] Built target example_control_geometric
[ 77%] Built target example_control_geometric_velocity
[ 77%] Built target example_control
[ 77%] Built target joystick_controller
[ 88%] Built target dasc_robot_lib
[ 94%] [32mBuilding CXX object CMakeFiles/trajectory_follower.dir/src/trajectory_follower.cpp.o[0m
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In member function ‘void TrajectoryFollower::traj_callback(dasc_msgs::msg::QuadTrajectory_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:132:30: error: ‘const SharedPtr’ {aka ‘const class std::shared_ptr<dasc_msgs::msg::QuadTrajectory_<std::allocator<void> > >’} has no member named ‘ts’
  132 |     for (size_t i=0; i < msg.ts.size(); i++){
      |                              ^~
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:146:19: error: ‘QuadSetpoint’ {aka ‘struct dasc_msgs::msg::QuadSetpoint_<std::allocator<void> >’} has no member named ‘yaws’; did you mean ‘yaw’?
  146 |     last_setpoint.yaws = msg->yaws.back();
      |                   ^~~~
      |                   yaw
make[2]: *** [CMakeFiles/trajectory_follower.dir/build.make:63: CMakeFiles/trajectory_follower.dir/src/trajectory_follower.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:94: CMakeFiles/trajectory_follower.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
